--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ pycallgraph2
 clickhouse_driver==0.2.3
 clickhouse_sqlalchemy==0.2.0
 sqlalchemy==1.4.32
+
+pyspark~=3.5.0
+pyspark-stubs~=3.0.0.post3
+
+pyarrow
